[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/PixelButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/LevelSelect.tscn" type="PackedScene" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]
[ext_resource path="res://images/title.png" type="Texture" id=4]
[ext_resource path="res://fonts/DejaVuSans.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/Title.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 6
font_data = ExtResource( 5 )

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_right = -3.0
theme = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -135.0
margin_top = 22.0
margin_right = 315.0
margin_bottom = 106.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 1 )
text = "High Point."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" parent="." instance=ExtResource( 2 )]
visible = false

[node name="TitleButtons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Start" parent="TitleButtons" instance=ExtResource( 1 )]
anchor_left = 0.420898
anchor_top = 0.53125
anchor_right = 0.571289
anchor_bottom = 0.671875
margin_left = 414.164
margin_top = 284.75
margin_right = 562.148
margin_bottom = 360.125
text = "Start (soon)"

[node name="LevelSel" parent="TitleButtons" instance=ExtResource( 1 )]
anchor_left = 0.303711
anchor_top = 0.699653
anchor_right = 0.453711
anchor_bottom = 0.840653
margin_left = 298.852
margin_top = 375.014
margin_right = 446.852
margin_bottom = 450.374
text = "Level Select"

[node name="Options" parent="TitleButtons" instance=ExtResource( 1 )]
anchor_left = 0.535156
anchor_top = 0.699653
anchor_right = 0.685156
anchor_bottom = 0.840653
margin_left = 526.594
margin_top = 375.014
margin_right = 674.594
margin_bottom = 450.374
text = "Options (soon)"

[connection signal="pressed_button" from="TitleButtons/Start" to="." method="_on_Start_pressed_button"]
[connection signal="pressed_button" from="TitleButtons/LevelSel" to="." method="_on_LevelSel_pressed_button"]
[connection signal="pressed_button" from="TitleButtons/Options" to="." method="_on_Options_pressed_button"]
